--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
         .secondDiv{
             width: 20px;
             height: 20px;
-            background-color: red;
+            background-color: rgb(255, 0, 0);
             position: relative;
             animation-name: example;
             animation-duration: 4s;
@@ -25,7 +25,7 @@
                 left: 0px;
             }
             50%{
-                background-color: blue;
+                background-color: rgba(0, 0, 255, 0.493);
                 left: 200px;
             }
             100%{
